# rpi_blower_tester

./: .env  Dockerfile  README.md  blower_tester.service  cmdline.txt  install.sh  man.1  pyproject.toml  rpi_blower_tester  test.sh  uninstall.sh
.github/workflows/: build_test.yml  full_test.yml
blower_tester/: Dockerfile  pyproject.toml
blower_tester/blower_tester/: __main__.py  blower_main.py  config.py  dut_tests.py  stm32.py  thermal_monitor.py
blower_tester/tests/: test_blower_main.py  test_dut_tests.py  test_sample.py
deploy/: blower_test.service  build.sh  install.sh  run.sh  test.sh
src/: pyproject.toml
src/blower_tester/: Dockerfile  pyproject.toml
tests/: test_sample.py
